# vaccinatorLib

./: .gitignore  CMakeLists.txt  LICENSE  README.adoc  changeappid.c  datause.c  dir_d44c64559bbebec7f509842c48db8b23.html  group__dverrors.html  group__dverrors.js  group__dvgeneral.html  group__dvgeneral.js  group__dvmain.html  group__dvmain.js  group__dvpublish.html  group__dvpublish.js  group__glos.html  index.html  modules.html  modules.js  navtreedata.js  navtreeindex0.js  publish.c  vaccinator.h  vaccinator.tag  vaccinator_8h_source.html
.github/workflows/: doxygen.yml
examples/: CMakeLists.txt  changeappid.c  datause.c  publish.c
include/: vaccinator.h
lib/: CMakeLists.txt  crypto.c  curl.c  json.c  lib.c  lib.h  misc.c
resources/: Config.cmake.in  Doxyfile.in  helpers.cmake
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  enums_0.js  enums_1.js  enumvalues_0.js  functions_0.js  functions_1.js  groups_0.js  groups_1.js  groups_10.js  groups_11.js  groups_12.js  groups_13.js  groups_14.js  groups_2.js  groups_3.js  groups_4.js  (+31 more)
tests/: CMakeLists.txt  FindCheck.cmake  caching.c  change.c  cipher.c  test.c  tests.h  vacc.c
